--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,11 @@ fabric~=2.6.0
 optax==0.0.9
 dm-haiku==0.0.5
 git+https://github.com/EleutherAI/lm-evaluation-harness/
-ray[default]==1.4.1
+ray[default]==2.2.0
 jax~=0.2.12
 Flask~=1.1.2
 cloudpickle~=1.3.0
-tensorflow-cpu~=2.6.0
+tensorflow-gpu~=2.12.0
 google-cloud-storage~=1.36.2
 transformers
 smart_open[gcs]
